--- a/_src/css/_header.scss
+++ b/_src/css/_header.scss
@@ -21,7 +21,7 @@
   }
 
   &__title {
-    font-size: 85px;
+    font-size: 90px;
     margin: 0;
   }
 
@@ -31,6 +31,8 @@
   }
 
   &__divider {
+    text-align: left;
+    margin: 0;
     width: 70px;
     border: 2px solid white;    
   }
