--- a/_src/css/_section.scss
+++ b/_src/css/_section.scss
@@ -11,6 +11,29 @@
     flex-direction: column;
     align-items: center;
     height: 100vh;
+
+    .divider {
+      width: 70px;
+      border: 2px solid white;    
+    }
+  
+    .box {
+      padding: 25px 0;
+    }
+
+    .box__links {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      text-decoration: none;
+      font-size: 18px;
+      border-bottom: 2px solid #454545;
+      padding: 0 0 15px;
+    }
+
+    .box__image {
+      transform: rotate(-90deg);
+    }
   }
 
   &--lighter {
@@ -22,12 +45,11 @@
       line-height: 25px;
       font-size: 16px;
       text-align: justify;
-
     }
 
     &__vector {
-      position: relative;
-      bottom: -27px;  
+      position: absolute;
+      bottom: 20px;
       padding: 50px;
     }
 
@@ -44,24 +66,29 @@
     &__section {
       color: white;
       padding: 70px 0;
+      width: 100%;
     }
+
+      span {
+        display: flex;
+        justify-content: center;
+      }
   }
 
   &--darker {
     background-color: #1E1E1E;
 
-      &__title {
-        display: flex;
-        justify-content: center;
-      }
-    
-      &__section {
-        display: flex;
-        flex-direction: column;
-        height: 350px;
-        width: 100%;
-        padding-top: 50px;  
-      }
+    &__title {
+      display: flex;
+      justify-content: center;
+    }
+  
+    &__section {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      padding-top: 50px;  
+    }
   }
 
 }
